--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body, html {
 }
 
 .bg-image {
-    background-image: url(./images/image.png);
+    background-image: url(./images/image.jpg);
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
